deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meinbus-deployment
  namespace: meinbus
  labels:
    app: meinbus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meinbus
  template:
    metadata:
      labels:
        app: meinbus
    spec:
      restartPolicy: Always
      containers:
      - name: meinbus
        image: ghcr.io/bigg01/meinbus:main
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
