deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: meinbus-service
  namespace: meinbus
spec:
  selector:
    app: meinbus
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
