deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meinbus-ingress
  namespace: meinbus
spec:
  ingressClassName: nginx
  rules:
    - host: meinbus.apps.g01.containerize.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meinbus
                port:
                  number: 5000
